--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body ng-app="starter">
 
@@ -28,6 +29,10 @@
         <h1 class="title">Ionic Blank Starter</h1>
       </ion-header-bar>
       <ion-content>
+          <form>
+              <input id="messageBox" type="text"><br>
+              <button onclick="send()">SEND</button>
+          </form>
       </ion-content>
     </ion-pane>
   </body>
