--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-
-
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -16,9 +14,8 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
-
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-
+    <link href="css/style.css" rel="stylesheet">
 
     <style type="text/css">
       .platform-ios .manual-ios-statusbar-padding{
@@ -41,6 +38,8 @@
       }
     </style>
 
+    <link rel="stylesheet" href="css/angular-chart.css">
+
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
@@ -52,6 +51,11 @@
     -->
 
     <script src="js/main.js"></script>
+    <script src="lib/Chart.min.js"></script>
+    <script src="lib/angular-chart.min.js"></script>
+    <!-- <script src="js/graph.js"></script> -->
+    <!-- <script src="https://cdn.plot.ly/plotly-1.8.0.min.js"></script> -->
+
 
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
